ghc-4335c07/testsuite/tests/th/T12411.stderr

T12411.hs:4:1: error:
    Pattern syntax in expression context: pure@Q
    Did you mean to enable TypeApplications?
