ghc-4335c07/testsuite/tests/th/T12411.hs
{-# LANGUAGE TemplateHaskell #-}
module T12411 where

pure @Q []
